[workspace]
members = ["general/*", "leetcode/*"]

[workspace.package]
edition = "2021"
rust-version = "1.66"
description = "Solutions to problems on sites like leetcode.com"
authors = ["Atri Hegde <iamatrihegde@outlook.com>"]
repository = "https://github.com/hegde-atri/rust_practice"
license = "GPL-v3"
publish = false
